; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_texture.c_sample_1d_linear_mipmap_nearest.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_texture.c_sample_1d_linear_mipmap_nearest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_texture_object = type { %struct.TYPE_2__** }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_texture_object*, float, float, i32*, i32*, i32*, i32*)* @sample_1d_linear_mipmap_nearest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sample_1d_linear_mipmap_nearest(%struct.gl_texture_object* %0, float %1, float %2, i32* %3, i32* %4, i32* %5, i32* %6) #0 {
  %8 = alloca %struct.gl_texture_object*, align 8
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  store %struct.gl_texture_object* %0, %struct.gl_texture_object** %8, align 8
  store float %1, float* %9, align 4
  store float %2, float* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  %17 = load float, float* %10, align 4
  %18 = fcmp ole float %17, 5.000000e-01
  br i1 %18, label %19, label %20

19:                                               ; preds = %7
  store i64 0, i64* %15, align 8
  br label %37

20:                                               ; preds = %7
  %21 = load %struct.gl_texture_object*, %struct.gl_texture_object** %8, align 8
  %22 = getelementptr inbounds %struct.gl_texture_object, %struct.gl_texture_object* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %23, i64 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  store i64 %27, i64* %16, align 8
  %28 = load float, float* %10, align 4
  %29 = fadd float %28, 0x3FDFFFFBC0000000
  %30 = fptosi float %29 to i64
  store i64 %30, i64* %15, align 8
  %31 = load i64, i64* %15, align 8
  %32 = load i64, i64* %16, align 8
  %33 = icmp sgt i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %20
  %35 = load i64, i64* %16, align 8
  store i64 %35, i64* %15, align 8
  br label %36

36:                                               ; preds = %34, %20
  br label %37

37:                                               ; preds = %36, %19
  %38 = load %struct.gl_texture_object*, %struct.gl_texture_object** %8, align 8
  %39 = load %struct.gl_texture_object*, %struct.gl_texture_object** %8, align 8
  %40 = getelementptr inbounds %struct.gl_texture_object, %struct.gl_texture_object* %39, i32 0, i32 0
  %41 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %40, align 8
  %42 = load i64, i64* %15, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %41, i64 %42
  %44 = load %struct.TYPE_2__*, %struct.TYPE_2__** %43, align 8
  %45 = load float, float* %9, align 4
  %46 = load i32*, i32** %11, align 8
  %47 = load i32*, i32** %12, align 8
  %48 = load i32*, i32** %13, align 8
  %49 = load i32*, i32** %14, align 8
  %50 = call i32 @sample_1d_linear(%struct.gl_texture_object* %38, %struct.TYPE_2__* %44, float %45, i32* %46, i32* %47, i32* %48, i32* %49)
  ret void
}

declare dso_local i32 @sample_1d_linear(%struct.gl_texture_object*, %struct.TYPE_2__*, float, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
